# open-source-mlops-e2e

./: TrainChurnModel.ipynb  dvc.yaml  grid_search.sh  metrics.json  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
dvc_plots/: index.html
models/: clf-model.joblib  clf-model.joblib.dvc
reports/: feat_imp.csv
src/stages/: data_split.py  eval.py  train.py
