[project]
name = "open-source-mlops-e2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibi-detect>=0.12.0",
    "csv2md>=1.3.0",
    "eli5>=0.13.0",
    "fastapi>=0.115.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.9",
    "python-box>=7.2.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.31.0",
    "xgboost>=2.1.1",
]

[tool.uv.sources]
eli5 = { git = "https://github.com/RobertCarruthers-Ki/eli5", branch = "update-sklearn" }
